[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/UI/PauseMenue/PauseMenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/UI/GUI/WeaponAttributes.gd" type="Script" id=2]

[node name="WeaponAttributes" type="VBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 69.0
margin_bottom = 111.0
theme = ExtResource( 1 )
alignment = 1
script = ExtResource( 2 )

[node name="WeaponName" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 9.0
margin_right = 141.0
margin_bottom = 23.0
text = "Name"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 27.0
margin_right = 141.0
margin_bottom = 41.0

[node name="Label" type="Label" parent="HBoxContainer"]
margin_right = 57.0
margin_bottom = 14.0
text = "DAMAGE"

[node name="Damage" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
margin_left = 61.0
margin_right = 61.0
margin_bottom = 14.0

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
visible = false
margin_top = 36.0
margin_right = 141.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="HBoxContainer4"]
margin_right = 92.0
margin_bottom = 14.0
text = "DAMAGE_TYPE"

[node name="DamageType" type="Label" parent="HBoxContainer4"]
unique_name_in_owner = true
margin_left = 96.0
margin_right = 96.0
margin_bottom = 14.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 45.0
margin_right = 141.0
margin_bottom = 59.0

[node name="Label" type="Label" parent="HBoxContainer2"]
margin_right = 64.0
margin_bottom = 14.0
text = "FIRE_RATE"

[node name="Rate" type="Label" parent="HBoxContainer2"]
unique_name_in_owner = true
margin_left = 68.0
margin_right = 68.0
margin_bottom = 14.0

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_top = 63.0
margin_right = 141.0
margin_bottom = 77.0

[node name="Label" type="Label" parent="HBoxContainer3"]
margin_right = 44.0
margin_bottom = 14.0
text = "RANGE"

[node name="Range" type="Label" parent="HBoxContainer3"]
unique_name_in_owner = true
margin_left = 48.0
margin_right = 48.0
margin_bottom = 14.0

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
margin_top = 81.0
margin_right = 141.0
margin_bottom = 95.0

[node name="Label" type="Label" parent="HBoxContainer5"]
margin_right = 137.0
margin_bottom = 14.0
text = "EXPLOSION_DAMAGE"

[node name="ExplosionDamage" type="Label" parent="HBoxContainer5"]
unique_name_in_owner = true
margin_left = 141.0
margin_right = 141.0
margin_bottom = 14.0
